--- a/index.html
+++ b/index.html
@@ -10,30 +10,30 @@
 <body>
     <div id="calculator">
 
-        <div class="screen"><span>0</span></div>
+        <div class="screen">0</div>
 
         <button class="btn operator">AC</button>
         <button class="btn operator">+/-</button>
         <button class="btn operator">x^y</button>
         <button class="btn operator">/</button>
 
-        <button class="btn">7</button>
-        <button class="btn">8</button>
-        <button class="btn">9</button>
+        <button class="btn num">7</button>
+        <button class="btn num">8</button>
+        <button class="btn num">9</button>
         <button class="btn operator">*</button>
         
-        <button class="btn">5</button>
-        <button class="btn">4</button>
-        <button class="btn">6</button>
+        <button class="btn num">5</button>
+        <button class="btn num">4</button>
+        <button class="btn num">6</button>
         <button class="btn operator">-</button>
 
-        <button class="btn">1</button>
-        <button class="btn">2</button>
-        <button class="btn">3</button>
+        <button class="btn num">1</button>
+        <button class="btn num">2</button>
+        <button class="btn num">3</button>
         <button class="btn operator">+</button>
 
-        <button class="btn zero">0</button>
-        <button class="btn">.</button>
+        <button class="btn num zero">0</button>
+        <button class="btn num">.</button>
         <button class="btn operator">=</button>
     </div>
 </body>
