Wrote flipSign, resetAll, the state functionality, and the number selecting functionality

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <div id="calculator">
 
-        <div class="screen">0</div>
+        <div class="screen"></div>
 
-        <button class="btn operator">AC</button>
+        <button class="btn operator flex-two" id="AC">AC</button>
+        <!-- <button class="btn operator">x^y</button> -->
         <button class="btn operator">+/-</button>
-        <button class="btn operator">x^y</button>
         <button class="btn operator">/</button>
 
         <button class="btn num">7</button>
@@ -32,7 +32,7 @@
         <button class="btn num">3</button>
         <button class="btn operator">+</button>
 
-        <button class="btn num zero">0</button>
+        <button class="btn num flex-two">0</button>
         <button class="btn num">.</button>
         <button class="btn operator">=</button>
     </div>
